* Gtk.Forms.sln: * Gtk.Forms\objects.xml: * examples\GridViewBinding: * Gtk.Forms\Gtk.Forms.csproj: * Gtk.Forms\Widgets\FormsEntry.cs: * examples\GridViewBinding\gtk-gui: * examples\GridViewBinding\Main.cs: * Gtk.Forms\Widgets\FormsComboBox.cs: * Gtk.Forms\Widgets\FormsGridView.cs: * examples\GridViewBinding\Product.cs: * Gtk.Forms\Decorators\EntryAdapter.cs: * Gtk.Forms\Decorators\EntryDecorator.cs: * examples\GridViewBinding\MainWindow.cs: * Gtk.Forms\Decorators\WindowDecorator.cs: * examples\GridViewBinding\AssemblyInfo.cs: * Gtk.Forms\Decorators\GridViewDecorator.cs: * Gtk.Forms\Decorators\IDecoratedGridView.cs: * examples\GridViewBinding\gtk-gui\gui.stetic: * Gtk.Forms\Decorators\ListWidgetDecorator.cs: * Gtk.Forms\Decorators\IDecoratedListWidget.cs: * examples\GridViewBinding\gtk-gui\generated.cs: * examples\GridViewBinding\gtk-gui\MainWindow.cs: * examples\LabelEntryBinding\gtk-gui\generated.cs: * examples\GridViewBinding\GridViewBinding.csproj: * Gtk.Forms\Decorators\BaseListWidgetDecorator.cs: * Gtk.Forms\Decorators\IDecoratedBaseListWidget.cs: * examples\LabelEntryBinding\gtk-gui\MainWindow.cs: * examples\LabelEntryBinding\ComboBoxBinding\MainWindow.cs: * examples\LabelEntryBinding\ComboBoxBinding\gtk-gui\gui.stetic: * examples\LabelEntryBinding\ComboBoxBinding\gtk-gui\generated.cs: * examples\LabelEntryBinding\ComboBoxBinding\gtk-gui\MainWindow.cs:

--- a/Gtk.Forms/Gtk.Forms.csproj
+++ b/Gtk.Forms/Gtk.Forms.csproj
@@ -79,9 +79,14 @@
     <Compile Include="Decorators\IFormsWidget.cs" />
     <Compile Include="Decorators\ContainerDecorator.cs" />
     <Compile Include="Decorators\WindowDecorator.cs" />
-    <Compile Include="Decorators\EntryAdapter.cs" />
     <Compile Include="Decorators\ListWidgetDecorator.cs" />
     <Compile Include="Decorators\IDecoratedListWidget.cs" />
+    <Compile Include="Decorators\EntryDecorator.cs" />
+    <Compile Include="Decorators\IDecoratedBaseListWidget.cs" />
+    <Compile Include="Decorators\BaseListWidgetDecorator.cs" />
+    <Compile Include="Widgets\FormsGridView.cs" />
+    <Compile Include="Decorators\GridViewDecorator.cs" />
+    <Compile Include="Decorators\IDecoratedGridView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -104,9 +109,11 @@
     <EmbeddedResource Include="Pixmaps\spinbutton.png">
       <LogicalName>spinbutton.png</LogicalName>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Pixmaps\checkbutton.png" />
-    <None Include="Pixmaps\combo.png" />
+    <EmbeddedResource Include="Pixmaps\checkbutton.png">
+      <LogicalName>checkbutton.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pixmaps\combo.png">
+      <LogicalName>combo.png</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
