Rename Gtk.Forms to GtkForms * Gtk.Forms.sln: * Gtk.Forms/objects.xml: * Gtk.Forms/GtkForms.csproj: * Gtk.Forms/AssemblyInfo.cs: * Gtk.Forms/Gtk.Forms.csproj: * Gtk.Forms/Bindings/Binding.cs: * Gtk.Forms/Widgets/FormsEntry.cs: * Gtk.Forms/Widgets/FormsLabel.cs: * Gtk.Forms/Widgets/FormsWindow.cs: * Gtk.Forms/Widgets/FormsComboBox.cs: * Gtk.Forms/Widgets/FormsGridView.cs: * Gtk.Forms/Bindings/BindingSource.cs: * Gtk.Forms/Widgets/FormsSpinButton.cs: * Gtk.Forms/Bindings/BaseCollection.cs: * Gtk.Forms/Decorators/IFormsWidget.cs: * Gtk.Forms/Bindings/BindingContext.cs: * Gtk.Forms/Bindings/CurrencyManager.cs: * Gtk.Forms/Bindings/PropertyManager.cs: * Gtk.Forms/Widgets/FormsCheckButton.cs: * examples/GridViewBinding/MainWindow.cs: * Gtk.Forms/Decorators/EntryDecorator.cs: * Gtk.Forms/Bindings/ConvertEventArgs.cs: * Gtk.Forms/Bindings/ListBindingHelper.cs: * Gtk.Forms/Bindings/ControlUpdateMode.cs: * Gtk.Forms/Decorators/WidgetDecorator.cs: * Gtk.Forms/Decorators/WindowDecorator.cs: * Gtk.Forms/Bindings/BindingMemberInfo.cs: * Gtk.Forms/Bindings/BindingManagerBase.cs: * Gtk.Forms/Bindings/IBindableComponent.cs: * Gtk.Forms/Bindings/BindingsCollection.cs: * examples/LabelEntryBinding/MainWindow.cs: * Gtk.Forms/Decorators/GridViewDecorator.cs: * Gtk.Forms/Bindings/NotifiedBindingList.cs: * Gtk.Forms/Bindings/ConvertEventHandler.cs: * Gtk.Forms/Bindings/BindingCompleteState.cs: * Gtk.Forms/Bindings/DataSourceUpdateMode.cs: * Gtk.Forms/Bindings/ListBindingConverter.cs: * Gtk.Forms/Bindings/ItemChangedEventArgs.cs: * Gtk.Forms/Decorators/IDecoratedGridView.cs: * Gtk.Forms/Decorators/ContainerDecorator.cs: * Gtk.Forms/Decorators/ListWidgetDecorator.cs: * examples/GridViewBinding/gtk-gui/gui.stetic: * Gtk.Forms/Bindings/BindingCompleteContext.cs: * Gtk.Forms/Bindings/RelatedPropertyManager.cs: * Gtk.Forms/Decorators/IDecoratedListWidget.cs: * Gtk.Forms/Bindings/RelatedCurrencyManager.cs: * examples/GridViewBinding/gtk-gui/generated.cs: * examples/LabelEntryBinding/gtk-gui/gui.

--- a/Gtk.Forms/GtkForms.csproj
+++ b/Gtk.Forms/GtkForms.csproj
@@ -7,8 +7,8 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{ACB49736-47BC-4318-9665-CBF9D8CB34CD}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Gtk.Forms</RootNamespace>
-    <AssemblyName>Gtk.Forms</AssemblyName>
+    <RootNamespace>GtkForms</RootNamespace>
+    <AssemblyName>GtkForms</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
