--- a/trunk/examples/LabelEntryBinding/LabelEntryBinding.csproj
+++ b/trunk/examples/LabelEntryBinding/LabelEntryBinding.csproj
@@ -52,9 +52,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\..\Gtk.Forms\Gtk.Forms.csproj">
+    <ProjectReference Include="..\..\Gtk.Forms\GtkForms.csproj">
       <Project>{ACB49736-47BC-4318-9665-CBF9D8CB34CD}</Project>
-      <Name>Gtk.Forms</Name>
+      <Name>GtkForms</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
