Add RadioButton widget. Derived Binding.Parse and Bindind.Format from CancelEventHandler to stop binding process * GtkForms.sln: * Gtk.Forms/objects.xml: * Gtk.Forms/GtkForms.csproj: * Gtk.Forms/Bindings/Binding.cs: * Gtk.Forms/Pixmaps/textview.png: * Gtk.Forms/Widgets/FormsLabel.cs: * Gtk.Forms/Widgets/FormsButton.cs: * Gtk.Forms/Widgets/FormsWindow.cs: * Gtk.Forms/Pixmaps/radiobutton.png: * Gtk.Forms/Widgets/FormsComboBox.cs: * examples/LabelEntryBinding/Switch.cs: * Gtk.Forms/Widgets/FormsSpinButton.cs: * examples/LabelEntryBinding/Company.cs: * Gtk.Forms/Widgets/FormsRadioButton.cs: * Gtk.Forms/Bindings/ConvertEventArgs.cs: * Gtk.Forms/Widgets/FormsComboBoxEntry.cs: * examples/LabelEntryBinding/MainWindow.cs: * examples/LabelEntryBinding/gtk-gui/gui.stetic: * examples/LabelEntryBinding/gtk-gui/MainWindow.cs: * examples/LabelEntryBinding/LabelEntryBinding.csproj:

--- a/Gtk.Forms/GtkForms.csproj
+++ b/Gtk.Forms/GtkForms.csproj
@@ -104,6 +104,7 @@
     <Compile Include="GdkColors.cs" />
     <Compile Include="Widgets\FormsButton.cs" />
     <Compile Include="Widgets\IListWidget.cs" />
+    <Compile Include="Widgets\FormsRadioButton.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -134,6 +135,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Pixmaps\button.png">
       <LogicalName>button.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pixmaps\radiobutton.png">
+      <LogicalName>radiobutton.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pixmaps\textview.png">
+      <LogicalName>textview.png</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
