--- a/trunk/examples/LabelEntryBinding/LabelEntryBinding.csproj
+++ b/trunk/examples/LabelEntryBinding/LabelEntryBinding.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Company.cs" />
+    <Compile Include="Switch.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
