Add TextView control * Gtk.Forms/objects.xml: * Gtk.Forms/GtkForms.csproj: * Gtk.Forms/Widgets/FormsEntry.cs: * Gtk.Forms/Widgets/FormsTextView.cs: * Gtk.Forms/Bindings/BooleanBinding.cs: * examples/LabelEntryBinding/MainWindow.cs: * examples/LabelEntryBinding/gtk-gui/gui.stetic: * examples/LabelEntryBinding/gtk-gui/MainWindow.cs:

--- a/Gtk.Forms/GtkForms.csproj
+++ b/Gtk.Forms/GtkForms.csproj
@@ -37,16 +37,12 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
-      <Package>gtk-sharp-2.0</Package>
     </Reference>
     <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
-      <Package>gtk-sharp-2.0</Package>
     </Reference>
     <Reference Include="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
-      <Package>glib-sharp-2.0</Package>
     </Reference>
     <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
-      <Package>gtk-sharp-2.0</Package>
     </Reference>
     <Reference Include="Mono.Posix" />
     <Reference Include="System.Data" />
@@ -105,6 +101,8 @@
     <Compile Include="Widgets\FormsButton.cs" />
     <Compile Include="Widgets\IListWidget.cs" />
     <Compile Include="Widgets\FormsRadioButton.cs" />
+    <Compile Include="Bindings\BooleanBinding.cs" />
+    <Compile Include="Widgets\FormsTextView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
