--- a/trunk/Gtk.Forms/GtkForms.csproj
+++ b/trunk/Gtk.Forms/GtkForms.csproj
@@ -141,4 +141,11 @@
       <LogicalName>textview.png</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
+  <ProjectExtensions>
+    <MonoDevelop>
+      <Properties>
+        <GtkDesignInfo wasConverted="true" />
+      </Properties>
+    </MonoDevelop>
+  </ProjectExtensions>
 </Project>
