Treat DB.Null as a null value when comparing Allow setting properties before DataSource property * GtkForms.sln: * Gtk.Forms/GtkForms.csproj: * Gtk.Forms/Bindings/Binding.cs: * examples/LabelEntryBinding/MainWindow.gtkx: * Gtk.Forms/Decorators/BaseListWidgetDecorator.cs: * examples/LabelEntryBinding/ComboBoxBinding/City.cs: * examples/LabelEntryBinding/ComboBoxBinding/Company.cs: * examples/LabelEntryBinding/ComboBoxBinding/MainWindow.cs: * examples/LabelEntryBinding/ComboBoxBinding/MainWindow.gtkx: * examples/LabelEntryBinding/ComboBoxBinding/MainWindow.designer.cs: * examples/LabelEntryBinding/ComboBoxBinding/ComboBoxBinding.csproj:

--- a/Gtk.Forms/GtkForms.csproj
+++ b/Gtk.Forms/GtkForms.csproj
@@ -103,6 +103,8 @@
     <Compile Include="Widgets\FormsRadioButton.cs" />
     <Compile Include="Bindings\BooleanBinding.cs" />
     <Compile Include="Widgets\FormsTextView.cs" />
+    <Compile Include="Designer\ActionGroups.designer.cs" />
+    <Compile Include="Designer\Gui.designer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
