--- a/examples/LabelEntryBinding/LabelEntryBinding.csproj
+++ b/examples/LabelEntryBinding/LabelEntryBinding.csproj
@@ -42,6 +42,10 @@
     <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
     </Reference>
     <Reference Include="Mono.Posix" />
+    <Reference Include="GtkForms, Version=1.0.3919.1035, Culture=neutral, PublicKeyToken=null">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Gtk.Forms\bin\Debug\GtkForms.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainWindow.gtkx">
@@ -68,11 +72,4 @@
       <Name>GtkForms</Name>
     </ProjectReference>
   </ItemGroup>
-  <ProjectExtensions>
-    <MonoDevelop>
-      <Properties>
-        <GtkDesignInfo wasConverted="true" />
-      </Properties>
-    </MonoDevelop>
-  </ProjectExtensions>
 </Project>
