Add FormsBin widget * Gtk.Forms/GtkForms.csproj: * Gtk.Forms/Widgets/FormsBin.cs: * examples/DatePickerDemo/DatePickerDemo.csproj: * examples/LabelEntryBinding/LabelEntryBinding.csproj: * examples/LabelEntryBinding/ComboBoxBinding/ComboBoxBinding.csproj:

--- a/Gtk.Forms/GtkForms.csproj
+++ b/Gtk.Forms/GtkForms.csproj
@@ -116,6 +116,7 @@
       <DependentUpon>DatePicker.cs</DependentUpon>
     </Compile>
     <Compile Include="Widgets\FormsDatePicker.cs" />
+    <Compile Include="Widgets\FormsBin.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
